Added Stratego Action

--- a/Stratego/res/layout/activity_stratego_board.xml
+++ b/Stratego/res/layout/activity_stratego_board.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical" >
 
         <TableLayout
+            android:id="@+id/BoardTable"
             android:layout_width="505dp"
             android:layout_height="505dp"
             android:background="@drawable/classic_board" >
@@ -676,7 +677,5 @@
                     class="com.gmu.stratego.board.BoardTile" />
             </TableRow>
         </TableLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
