--- a/Stratego/res/layout/activity_stratego_board.xml
+++ b/Stratego/res/layout/activity_stratego_board.xml
@@ -781,31 +781,14 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     class="com.gmu.stratego.board.BoardTile" />
-
-                <view
-                    android:id="@+id/deployment15"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    class="com.gmu.stratego.board.BoardTile" />
-
-                <view
-                    android:id="@+id/deployment16"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    class="com.gmu.stratego.board.BoardTile" />
-
-                <view
-                    android:id="@+id/deployment17"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    class="com.gmu.stratego.board.BoardTile" />
-                <view
-                    android:id="@+id/deployment18"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    class="com.gmu.stratego.board.BoardTile" />
             </TableRow>
         </TableLayout>
+
+        <Button
+            android:id="@+id/commitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Commit Deployment" />
 
     </LinearLayout>
 </RelativeLayout>
